--- a/src/styles/classic/Hero.css
+++ b/src/styles/classic/Hero.css
@@ -6,6 +6,7 @@
     position: relative;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     text-align: center;
 }
 
